# fontbot

./: .gitignore  LICENSE  README.md  fontbot.cabal  stack.yaml
app/: Main.hs
fontbot/: AssemblyInfo.fs  Program.fs  fontbot.cabal  fontbot.fsproj  fontbot.sln
fontbot/.stack-work/install/b6a8628b/flag-cache/: fontbot-0.1.0.0-219c34e03d8d12fd4f00cf9027e39025
fontbot/.stack-work/install/b6a8628b/lib/x86_64-windows-ghc-7.10.3/fontbot-0.1.0.0-5qm1VOxKmoN63Q901jcL3H/: Lib.hi
fontbot/.stack-work/install/b6a8628b/pkgdb/: fontbot-0.1.0.0-219c34e03d8d12fd4f00cf9027e39025.conf
fontbot/src/: Lib.hs
src/: Lib.hs  TwitterUtilities.hs
