name:                fontbot
version:             0.1.0.1
synopsis:            Choose word, choose font, tweet.
description:         Please see README.md
homepage:            https://github.com/piotrjustyna/fontbot#readme
license:             BSD3
license-file:        LICENSE
author:              Piotr Justyna
maintainer:          piotr.justyna@gmail.com
copyright:           2016 Piotr Justyna
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , TwitterUtilities
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , yaml
                     , twitter-conduit
                     , text
                     , lens
                     , twitter-types
                     , Rasterific
                     , JuicyPixels
                     , FontyFruity
                     , regex-posix
                     , string-conv
                     , directory
                     , random
  default-language:    Haskell2010

executable fontbot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fontbot
  default-language:    Haskell2010

test-suite fontbot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fontbot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/piotrjustyna/fontbot
